[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Dan Nguyen <pedantic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.0.0"
# itertools = "0.9.0"
rayon = "1.5.1"
# lazy_static = "1.4.0"
num = "0.4.0"
# pathfinding = "2.1.1"
bytecount = "0.6.2"
nohash-hasher = "0.2.0"
stable-pattern = "0.1.0"
arrayvec = "0.7.2"
bit-set = "0.5"
