[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Dan Nguyen <pedantic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.3"
# itertools = "0.9.0"
rayon = "1.10.0"
# lazy_static = "1.4.0"
num = "0.4.3"
# pathfinding = "4.13.0"
bytecount = "0.6.8"
nohash-hasher = "0.2.0"
stable-pattern = "0.1.0"
arrayvec = "0.7.6"
bit-set = "0.8"
pathfinding = "4.13.1"
