[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Dan Nguyen <pedantic@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

arrayvec = "0.7.6"
bit-set = "0.8"
nom = "8.0.0"
num = "0.4.3"
stable-pattern = "0.1.0"
rayon = "1.10.0"
bytecount = "0.6.8"
nohash-hasher = "0.2.0"
